src/objects/Grupo__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <label>Activo</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AperturaAcademico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apertura académico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AperturaOperativo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apertura operativo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AulaAsignada__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aula</label>
        <referenceTo>Aula__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorizaGrupo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorización de grupo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CondicionanteGrupo__c</fullName>
        <inlineHelpText>Condicionante de grupo</inlineHelpText>
        <label>Cond. gpo</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consecutivo__c</fullName>
        <label>Consecutivo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cupo__c</fullName>
        <label>Cupo</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dia__c</fullName>
        <label>Días</label>
        <picklist>
            <picklistValues>
                <fullName>Todos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunes a viernes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miércoles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jueves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viernes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sábado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domingo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Docente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Docente</label>
        <referenceTo>Docente__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnviadoERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Esquema__c</fullName>
        <label>Esquema</label>
        <picklist>
            <picklistValues>
                <fullName>Cuatrimestral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semestral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Planeado</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FechaApertura__c</fullName>
        <description>Fecha de apertura</description>
        <inlineHelpText>Fecha de apertura</inlineHelpText>
        <label>F. Apertura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaInicioClases__c</fullName>
        <inlineHelpText>Fecha de inicio de clases</inlineHelpText>
        <label>F. Inicio clases</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FechaRegistro__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fecha de registro</inlineHelpText>
        <label>F. Registro</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrupoProcesado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grupo procesado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <label>Grupo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoraEntrada__c</fullName>
        <inlineHelpText>Hora de entrada</inlineHelpText>
        <label>H. Entrada</label>
        <picklist>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HoraSalida__c</fullName>
        <inlineHelpText>Hora de salida</inlineHelpText>
        <label>H. Salida</label>
        <picklist>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdGrupo_c__c</fullName>
        <externalId>true</externalId>
        <label>IdGrupo__c</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IdPrograma__c</fullName>
        <formula>OfertaEducativa__r.Programa__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdPrograma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdTurno__c</fullName>
        <formula>CASE( Turno__c , &quot;Matutino&quot;, 1, &quot;Vespertino&quot;, 2,&quot;Mixto&quot;,2,&quot;Abierto&quot;,4,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdTurno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inscritos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Inscritos</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Materia</label>
        <referenceTo>Materia__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModificadoERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modificado ERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <formula>OfertaEducativa__r.Nivel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomenclatura__c</fullName>
        <label>Nomenclatura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfertaEducativa__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Oferta educativa</label>
        <referenceTo>OfertaEducativa__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodicidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Periodicidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Periodicidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodoAperturaGrupo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Periodo apertura grupo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <formula>OfertaEducativa__r.Periodo__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periodo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <formula>OfertaEducativa__r.Plantel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plantel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PorcentajeInscritos__c</fullName>
        <formula>(Inscritos__c )/ Cupo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Porcentaje de inscritos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <formula>OfertaEducativa__r.Programa__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProspectosAsignados__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de prospectos que han sido asignados al grupo</description>
        <label>Prospectos asignados</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sede__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sede</label>
        <referenceTo>Sede__c</referenceTo>
        <relationshipLabel>Grupos</relationshipLabel>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TipoAutorizacion__c</fullName>
        <label>Tipo de autorización</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condicionada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turno__c</fullName>
        <globalPicklist>Turno</globalPicklist>
        <label>Turno</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;apex/ADM_Grupos?id=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsuarioApertura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usuario que apertura</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Grupos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validados__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Validados</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grupo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cupo__c</columns>
        <columns>Estatus__c</columns>
        <columns>Activo__c</columns>
        <columns>ProspectosAsignados__c</columns>
        <columns>Nivel__c</columns>
        <columns>Periodo__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>OfertaEducativa__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>GruposAutorizados</fullName>
        <columns>NAME</columns>
        <columns>Cupo__c</columns>
        <columns>Estatus__c</columns>
        <columns>Activo__c</columns>
        <columns>Materia__c</columns>
        <columns>Programa__c</columns>
        <columns>Docente__c</columns>
        <columns>ProspectosAsignados__c</columns>
        <columns>Validados__c</columns>
        <columns>Inscritos__c</columns>
        <columns>Nivel__c</columns>
        <columns>Periodo__c</columns>
        <columns>Plantel__c</columns>
        <columns>OfertaEducativa__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estatus__c</field>
            <operation>equals</operation>
            <value>Autorizado</value>
        </filters>
        <filters>
            <field>Periodo__c</field>
            <operation>equals</operation>
            <value>Mayo 2016</value>
        </filters>
        <label>Grupos autorizados</label>
    </listViews>
    <listViews>
        <fullName>Online</fullName>
        <columns>OfertaEducativa__c</columns>
        <columns>NAME</columns>
        <columns>Materia__c</columns>
        <columns>Nivel__c</columns>
        <columns>Periodo__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Nomenclatura__c</columns>
        <columns>Grupo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plantel__c</field>
            <operation>contains</operation>
            <value>Virtual</value>
        </filters>
        <label>Online</label>
    </listViews>
    <listViews>
        <fullName>TodosSinOferta</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>OfertaEducativa__c</columns>
        <columns>Grupo__c</columns>
        <columns>Cupo__c</columns>
        <columns>ProspectosAsignados__c</columns>
        <columns>Nivel__c</columns>
        <columns>Periodo__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Nomenclatura__c</columns>
        <columns>Periodicidad__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OfertaEducativa__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Periodo__c</field>
            <operation>equals</operation>
        </filters>
        <label>TodosSin Oferta</label>
    </listViews>
    <nameField>
        <label>Clave</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>